<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:gravity="center_vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/file_jpg_shared"
        android:textSize="16sp"
        android:maxLines="1"
        android:ellipsize="end" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fileSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_120_kb"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:alpha="0.7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        android:layout_marginStart="10dp" />

</LinearLayout>
