<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bubble"
    android:layout_width="@dimen/width_320"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:layout_margin="@dimen/margin_6"
    android:background="@drawable/bg_bubble_blue"
    android:orientation="vertical"
    android:padding="@dimen/padding_14">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fileName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/file_jpg"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/size_16"
                android:maxLines="2"
                android:ellipsize="end"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/previewIcon"
                android:layout_width="@dimen/width_42"
                android:layout_height="@dimen/height_42"
                android:layout_marginStart="@dimen/margin_10"
                android:src="@drawable/ic_file"
                android:tint="#FFFFFF"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fileMeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/fileAdd"
            android:textColor="#DDEBFF"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1"
            android:layout_marginTop="@dimen/margin_10"
            android:background="#40FFFFFF"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/historyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/history"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>
</LinearLayout>
