<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="end"
    android:paddingStart="24dp"
    android:paddingEnd="8dp"
    android:paddingTop="6dp"
    android:paddingBottom="6dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="280dp"
        android:minWidth="200dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_bubble_out"
        android:padding="12dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_pdf_out"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:maxLines="3"
                android:ellipsize="end"
                android:breakStrategy="balanced"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fileMeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_2_mb_out"
                android:textColor="#DDEBFF"
                android:textSize="13sp"
                android:layout_marginTop="4dp"/>

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/thumbnail"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="12dp"
            android:scaleType="centerCrop"
            android:background="@drawable/bg_thumb"
            android:src="@drawable/ic_file"
            android:tint="@android:color/white" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/messageTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:text="@string/_12_34_out"
        android:textSize="11sp"
        android:textColor="#999999" />

</LinearLayout>
