<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="start"
    android:paddingStart="@dimen/padding_8"
    android:paddingEnd="@dimen/padding_24"
    android:paddingTop="@dimen/padding_6"
    android:paddingBottom="@dimen/padding_6">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="@dimen/maxWidth_280"
        android:minWidth="@dimen/minWidth_200"
        android:background="@drawable/bg_bubble_in"
        android:orientation="horizontal"
        android:padding="@dimen/padding_12"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/thumbnail"
            android:layout_width="@dimen/width_70"
            android:layout_height="@dimen/height_70"
            android:layout_marginEnd="12dp"
            android:scaleType="centerCrop"
            android:background="@drawable/bg_thumb"
            android:src="@drawable/ic_file"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/file_pdf"
                android:textColor="@android:color/black"
                android:textSize="@dimen/size_15"
                android:maxLines="3"
                android:ellipsize="end"
                android:breakStrategy="balanced"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fileMeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/_1_2_mb"
                android:textColor="#666666"
                android:textSize="@dimen/size_13"
                android:layout_marginTop="@dimen/margin_4"/>

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/messageTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_marginStart="@dimen/margin_4"
            android:text="@string/_12_34"
            android:textSize="@dimen/size_11"
            android:textColor="@color/gray" />

</LinearLayout>
